# fiscal-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
dashboards/pages/: monthly.md  yearly.md
dashboards/sources/fiscal_pipeline/: connection.yaml  monthly_level_dashboard.sql  yearly_level_dashboard.sql
docs/: allocation.md
scripts/: backfill_btc_price.py
src/etl/: etl.py
src/sheets/: refresh_sheets.py  sheet_formats.py
src/sheets/worksheets/: _base.py  bucket_adherence.py  category_drilldown.py  income_derivation.py  investments.py  overview.py  runway.py
src/utils/: __init__.py  db_connection.py
src/warehouse/: create_warehouse.py
src/warehouse/sqlmesh_project/: config.py
src/warehouse/sqlmesh_project/audits/: daily_ledger_auto_match_amount_equals_deposit.sql  daily_ledger_manual_link_amounts_sum_to_deposit.sql  daily_ledger_manual_paystub_file_name_resolves.sql  monthly_runway_liquid_cash_conservation.sql  monthly_runway_net_burn_floor.sql  monthly_runway_runway_consistency.sql  monthly_runway_zone_consistency.sql  (+24 more)
tests/: test_batcher.py
tests/etl/: test_extract_accounts.py  test_extract_btc_price_history.py  test_extract_btc_wallet_history.py  test_extract_ticker_prices.py  test_load_annual_contributions_from_sheets.py  test_load_investment_transactions_from_sheets.py
tests/sheets/: fakes.py  test_bucket_adherence_worksheet.py  test_category_drilldown_worksheet.py  test_income_derivation_worksheet.py  test_investments_worksheet.py  test_overview_worksheets.py  test_refresh_sheets.py  test_runway_worksheet.py
(+49 files in other folders)
