[project]
name = "fiscal-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Ethan Fuerst", email = "34084535+ethanfuerst@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2024.12.14",
    "urllib3>=2.3.0",
    "pandas>=2.2.3",
    "modal>=1.0.0",
    "duckdb>=1.4.0",
    "sqlfluff>=3.3.0",
    "gspread>=6.1.4",
    "emoji>=2.14.1",
    "sqlmesh[web]>=0.186.1",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "preserve"
line-ending = "lf"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
    "ruff>=0.14.11",
    "pre-commit>=4.0.0",
]
